--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,27 @@
 # Mac
 .DS_Store
 
+# IDE-related
+.vscode
+
 # Python
 __pycache__
 *.pyc
 
 # habiter
 records.json
+records.db
+
+# Vitrual environment
+env/
 
 # Distribution
-/build/
-/dist/
+build/
+dist/
 *.egg
 *.eggs
 *.egg-info/
 MANIFEST
-/env
 
 # Designs
 *.drawio
