CI: Build and run with only one python version
This job exists to ensure a commit has not affected the ability for
this project to run on the OS's mentioned in the workflow file.
We don't need to run a different version of python just for the
small amount of code that the interpreter executes.

--- a/.github/workflows/build_run.yml
+++ b/.github/workflows/build_run.yml
@@ -11,12 +11,11 @@ jobs:
     strategy:
       matrix:
         runs-on: [ubuntu-latest, macos-latest, windows-latest]
-        py-version: [3.8, 3.9]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
-          python-version: ${{ matrix.py-version }}
+          python-version: 3.9
       - name: Ensure pip is up-to-date
         shell: bash
         run: |
@@ -27,4 +26,4 @@ jobs:
         shell: bash
         run: |
           pip install -e .
-          ${{ env.PY_MODULE_ENTRY_SCRIPT }} --version
+          ${{ env.PY_MODULE_ENTRY_SCRIPT }} add test
