--- a/setup.cfg
+++ b/setup.cfg
@@ -29,3 +29,8 @@ exclude =
 [options.entry_points]
 console_scripts =
     habiter = habiter.internal.run:main
+
+# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#id2
+[flake8]
+max-line-length = 88
+extend-ignore = E203
