--- a/setup.cfg
+++ b/setup.cfg
@@ -21,6 +21,13 @@ install_requires =
     click>=8.1.3
     platformdirs>=3.2.0
 
+[options.extras_require]
+dev =
+    black>=23.3.0
+    flake8>=6.0.0
+    pytest>=7.2.2
+    twine>=4.0.2
+
 [options.packages.find]
 exclude =
     test
