--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,7 @@ install_requires =
 dev =
     black>=23.3.0
     flake8>=6.0.0
+    isort>=5.12.0
     pytest>=7.2.2
     twine>=4.0.2
 
@@ -41,3 +42,7 @@ console_scripts =
 [flake8]
 max-line-length = 88
 extend-ignore = E203
+
+# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#isort
+[isort]
+profile = black
