--- a/setup.cfg
+++ b/setup.cfg
@@ -22,10 +22,12 @@ install_requires =
     platformdirs>=3.2.0
 
 [options.extras_require]
-dev =
+style =
     black>=23.3.0
     flake8>=6.0.0
     isort>=5.12.0
+dev =
+    habiter[style]
     pytest>=7.2.2
     twine>=4.0.2
 
