--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install "flake8>=6.0.0" "black>=23.3.0" "isort>=5.12.0"
+          pip install ".[style]"
 
       - name: Lint with flake8
         run: flake8 . --count --show-source --statistics
